--- a/pareto/socialfooter/locales/en/LC_MESSAGES/pareto.socialfooter.po
+++ b/pareto/socialfooter/locales/en/LC_MESSAGES/pareto.socialfooter.po
@@ -1,10 +1,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2013-04-08 14:31+0000\n"
+"POT-Creation-Date: 2013-04-28 09:59+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Last-Translator: THijs <thijs@pareto.nl>\n"
+"Language-Team: Pareto <info@pareto.nl>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
