--- a/pareto/socialfooter/locales/sk/LC_MESSAGES/pareto.socialfooter.po
+++ b/pareto/socialfooter/locales/sk/LC_MESSAGES/pareto.socialfooter.po
@@ -1,19 +1,16 @@
-# --- PLEASE EDIT THE LINES BELOW CORRECTLY ---
-# SOME DESCRIPTIVE TITLE.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: 2013-05-31 15:34+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Last-Translator: THijs <thijs@pareto.nl>\n"
+"Language-Team: Pareto <info@pareto.nl>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0\n"
-"Language-Code: en\n"
-"Language-Name: English\n"
+"Language-Code: sk\n"
+"Language-Name: Slovenčina\n"
 "Preferred-Encodings: utf-8 latin1\n"
 "Domain: pareto.socialfooter\n"
 
